<resources>
    <string name="app_name">My Application(lvl1)</string>
    <string name="hello1">Hello!</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="hello2">Let\'s get acquainted</string>
    <string name="register_info">Fill out the profile and go to the application!</string>
    <string name="login_info">Enter your email and password below</string>
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile_info">Go to settings and fill out the profile</string>
    <string name="settings">Settings</string>
    <string name="ch_box_reg">Remember me</string>
    <string name="not_have_account">Don’t have account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="agreement">By clicking Register you agree to our Terms and Conditions</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="google_b">Google</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="incorrect_email">Incorrect E-Mail address</string>
    <string name="incorrect_password">Your password must include a minimum of 8 characters.</string>
    <string name="career">Career</string>
    <string name="home_address">Home address</string>
    <string name="forgot_your_password">Forgot your password?</string>
</resources>