<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileActivity">

    <View
        android:id="@+id/viewToContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/darkBlue"
        app:layout_constraintBottom_toTopOf="@id/viewBottomContainer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.5"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/viewBottomContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/buttonEditProfile"
        app:layout_constraintTop_toBottomOf="@id/viewToContainer"
        app:layout_constraintVertical_weight="0.5"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginOffset_16dp"
        android:layout_marginTop="@dimen/marginOffset_16dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/kgorbach"
        app:layout_constraintBottom_toTopOf="@+id/fullNameTextView"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettings" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fullNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_view_carrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_carrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/career"
        android:textColor="@color/lightGray"
        android:textSize="@dimen/textSize_14sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewHomeAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewHomeAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/home_address"
        android:textColor="@color/lightGray"
        android:textSize="@dimen/textSize_14sp"
        app:layout_constraintBottom_toBottomOf="@id/viewToContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_carrier" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewProfileInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/profile_info"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/textSize_14sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEditProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineThird"
        app:layout_constraintVertical_bias="0.11" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEditProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/transparent_black_button_big"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize_14sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMyContacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfileInfo"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintWidth_percent="0.78" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMyContacts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/transparent_black_button_small"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/view_my_contacts"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonEditProfile"
        app:layout_constraintWidth_percent="0.78" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/facebookVecIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/guidelineThird"
        app:layout_constraintEnd_toStartOf="@+id/linkedInVecIcon"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/guidelineFirst"
        app:layout_constraintTop_toTopOf="@+id/viewBottomContainer"
        app:srcCompat="@drawable/f_vec_icon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/linkedInVecIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/vkVecIcon"
        app:layout_constraintStart_toEndOf="@+id/facebookVecIcon"
        app:layout_constraintTop_toTopOf="@+id/facebookVecIcon"
        app:srcCompat="@drawable/link_in_vec_icon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/vkVecIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guidelineSecond"
        app:layout_constraintStart_toEndOf="@+id/linkedInVecIcon"
        app:layout_constraintTop_toTopOf="@+id/linkedInVecIcon"
        app:srcCompat="@drawable/vk_vec_icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.77" />

</androidx.constraintlayout.widget.ConstraintLayout>